--- a/app/src/main/res/layout/activity_registrazione.xml
+++ b/app/src/main/res/layout/activity_registrazione.xml
@@ -13,6 +13,12 @@
         android:layout_height="wrap_content"
         android:orientation="vertical">
 
+        <ImageView
+            android:id="@+id/img_registrazione"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:srcCompat="@drawable/studente" />
+
         <RadioGroup
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -48,8 +54,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginEnd="10dp"
-                    android:layout_marginRight="10dp"
-                    android:text="Seleziona università:" />
+                    android:text="Seleziona università" />
 
                 <Spinner
                     android:id="@+id/reg_universita"
@@ -65,13 +70,12 @@
                     android:id="@+id/textView4"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Inserisci matricola*:" />
+                    android:text="Inserisci matricola*" />
 
                 <EditText
                     android:id="@+id/reg_matricola"
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:ems="10"
                     android:hint="matricola"
                     android:inputType="textPersonName" />
             </TableRow>
@@ -84,13 +88,12 @@
                     android:id="@+id/textView5"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Inserisci nome:" />
+                    android:text="Inserisci nome" />
 
                 <EditText
                     android:id="@+id/reg_nome"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:ems="10"
                     android:hint="nome"
                     android:inputType="textPersonName" />
             </TableRow>
@@ -103,13 +106,12 @@
                     android:id="@+id/textView6"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Inserisci cognome:" />
+                    android:text="Inserisci cognome" />
 
                 <EditText
                     android:id="@+id/reg_cognome"
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:ems="10"
                     android:hint="cognome"
                     android:inputType="textPersonName" />
             </TableRow>
@@ -122,13 +124,12 @@
                     android:id="@+id/textView7"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Inserisci e-mail*:" />
+                    android:text="Inserisci e-mail*" />
 
                 <EditText
                     android:id="@+id/reg_email"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:ems="10"
                     android:hint="e-mail"
                     android:inputType="textEmailAddress" />
 
@@ -146,9 +147,8 @@
 
                 <EditText
                     android:id="@+id/reg_password"
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:ems="10"
                     android:hint="password"
                     android:inputType="textPassword" />
             </TableRow>
@@ -165,9 +165,8 @@
 
                 <EditText
                     android:id="@+id/reg_password2"
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:ems="10"
                     android:hint="password"
                     android:inputType="textPassword" />
             </TableRow>
