--- a/app/src/main/res/layout/activity_gestione_gruppi_dicente_frame_layout.xml
+++ b/app/src/main/res/layout/activity_gestione_gruppi_dicente_frame_layout.xml
@@ -5,7 +5,8 @@
     android:id="@+id/frameLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#FFFFFF">
+    android:background="#FFFFFF"
+    android:paddingBottom="10dp">
 
     <LinearLayout
         android:layout_width="match_parent"
