--- a/app/src/main/res/drawable/layout_docente.xml
+++ b/app/src/main/res/drawable/layout_docente.xml
@@ -8,9 +8,9 @@
         />
     <stroke
         android:width="1dp"
-        android:color="#46AF4A"
+        android:color="#4CAF50"
         />
     <corners android:radius="10dp" />
-    <solid android:color="#74E7FFEE"
+    <solid android:color="#FFF8EA"
         android:alpha="150"/>
 </shape>
