--- a/app/src/main/res/layout/activity_registrazione.xml
+++ b/app/src/main/res/layout/activity_registrazione.xml
@@ -3,9 +3,9 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:layout_margin="10dp"
+    android:layout_height="wrap_content"
     android:orientation="vertical"
+    android:padding="10dp"
     tools:context=".RegistrazioneActivity">
 
     <LinearLayout
@@ -53,13 +53,15 @@
                     android:id="@+id/textView3"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginEnd="10dp"
-                    android:text="Seleziona università" />
+                    android:layout_marginRight="5dp"
+                    android:text="Seleziona università:" />
 
                 <Spinner
                     android:id="@+id/reg_universita"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content" />
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:spinnerMode="dialog" />
             </TableRow>
 
             <TableRow
@@ -70,13 +72,15 @@
                     android:id="@+id/textView4"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Inserisci matricola*" />
+                    android:text="Inserisci matricola:*" />
 
                 <EditText
                     android:id="@+id/reg_matricola"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:layout_weight="1"
                     android:hint="matricola"
+                    android:layout_marginLeft="5dp"
                     android:inputType="textPersonName" />
             </TableRow>
 
@@ -88,13 +92,15 @@
                     android:id="@+id/textView5"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Inserisci nome" />
+                    android:text="Inserisci nome:" />
 
                 <EditText
                     android:id="@+id/reg_nome"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_weight="1"
                     android:hint="nome"
+                    android:layout_marginLeft="5dp"
                     android:inputType="textPersonName" />
             </TableRow>
 
@@ -106,13 +112,15 @@
                     android:id="@+id/textView6"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Inserisci cognome" />
+                    android:text="Inserisci cognome:" />
 
                 <EditText
                     android:id="@+id/reg_cognome"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:layout_weight="1"
                     android:hint="cognome"
+                    android:layout_marginLeft="5dp"
                     android:inputType="textPersonName" />
             </TableRow>
 
@@ -124,13 +132,15 @@
                     android:id="@+id/textView7"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Inserisci e-mail*" />
+                    android:text="Inserisci e-mail:*" />
 
                 <EditText
                     android:id="@+id/reg_email"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_weight="1"
                     android:hint="e-mail"
+                    android:layout_marginLeft="5dp"
                     android:inputType="textEmailAddress" />
 
             </TableRow>
@@ -143,13 +153,15 @@
                     android:id="@+id/textView8"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Crea password" />
+                    android:text="Crea password:" />
 
                 <EditText
                     android:id="@+id/reg_password"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:layout_weight="1"
                     android:hint="password"
+                    android:layout_marginLeft="5dp"
                     android:inputType="textPassword" />
             </TableRow>
 
@@ -161,13 +173,16 @@
                     android:id="@+id/textView0"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Conferma password" />
+                    android:layout_marginRight="5dp"
+                    android:text="Conferma password:" />
 
                 <EditText
                     android:id="@+id/reg_password2"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:layout_weight="1"
                     android:hint="password"
+                    android:layout_marginLeft="5dp"
                     android:inputType="textPassword" />
             </TableRow>
         </TableLayout>
