--- a/app/src/main/res/layout/dialog_crea_pdf.xml
+++ b/app/src/main/res/layout/dialog_crea_pdf.xml
@@ -33,24 +33,22 @@
 
         <Button
             android:id="@+id/btnDialogPdfAnnulla"
-            android:layout_width="50dp"
-            android:layout_height="30dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_gravity="left"
             android:layout_marginRight="10dp"
             android:layout_weight="1"
             android:background="@drawable/button_layout"
-            android:text="Annulla"
-            android:textSize="8sp" />
+            android:text="Annulla" />
 
         <Button
             android:id="@+id/btnDialogPdf"
-            android:layout_width="50dp"
-            android:layout_height="30dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_gravity="right"
             android:layout_weight="1"
             android:background="@drawable/button_layout"
-            android:text="Scarica"
-            android:textSize="8sp" />
+            android:text="Scarica" />
 
     </LinearLayout>
 </LinearLayout>
