--- a/app/src/main/res/layout/row_layout_componenti.xml
+++ b/app/src/main/res/layout/row_layout_componenti.xml
@@ -9,22 +9,18 @@
         android:id="@+id/checkComponente"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginRight="10dp"
-        android:textSize="16sp" />
+        android:layout_marginRight="5dp"
+        android:textColor="@android:color/tertiary_text_dark" />
 
     <TextView
         android:id="@+id/txtNomeComponente"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginRight="10dp"
-        android:textColor="#000000"
-        android:textSize="16sp" />
+        android:layout_marginRight="5dp" />
 
     <TextView
         android:id="@+id/txtCognomeComponente"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:textColor="#000000"
-        android:textSize="16sp" />
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
 
 </LinearLayout>
