--- a/app/src/main/res/layout/activity_prenotazione_studente.xml
+++ b/app/src/main/res/layout/activity_prenotazione_studente.xml
@@ -4,8 +4,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_margin="10dp"
+    android:background="@color/bianco"
     android:orientation="vertical"
+    android:padding="10dp"
     tools:context=".PrenotazioneStudenteActivity">
 
         <ScrollView
@@ -64,7 +65,6 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:gravity="center_horizontal"
-                            android:textColor="#23A364"
                             android:textSize="16sp" />
 
                         <TableLayout
@@ -73,7 +73,7 @@
                             android:layout_height="match_parent"
                             android:layout_gravity="center_horizontal"
                             android:layout_marginTop="10dp"
-                            android:background="@drawable/forma_dialog"
+                            android:background="@drawable/layout_gruppo_complete"
                             android:visibility="visible">
 
                                 <TableRow
