--- a/app/src/main/res/layout/dialog_prenotazione_gruppo.xml
+++ b/app/src/main/res/layout/dialog_prenotazione_gruppo.xml
@@ -2,14 +2,29 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:padding="5dp">
 
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="5dp"
+        android:gravity="center_horizontal"
+        android:text="Seleziona fasce orarie"
+        android:textColor="@color/colorPrimary"
+        android:textSize="24sp"
+        android:textStyle="bold" />
 
     <ListView
-        android:id="@+id/listaDisponibilitaActivity"
+        android:id="@+id/dialog_lista_disponibilita"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" >
+        android:layout_height="0dp"
+        android:layout_weight="1" />
 
-    </ListView>
-
+    <Button
+        android:id="@+id/dialog_btn_prenota"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@drawable/button_layout"
+        android:text="Prenota" />
 </LinearLayout>
