--- a/app/src/main/res/layout/activity_crea_codici.xml
+++ b/app/src/main/res/layout/activity_crea_codici.xml
@@ -17,17 +17,18 @@
 
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="0dp"
         android:layout_weight="1">
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:orientation="vertical">
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:layout_marginBottom="5dp"
                 android:orientation="horizontal">
 
                 <TextView
@@ -45,66 +46,95 @@
                     android:spinnerMode="dialog" />
             </LinearLayout>
 
-            <EditText
-                android:id="@+id/numeroPartecipanti"
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:ems="10"
-                android:hint="numero massimo di iscritti"
-                android:inputType="number"
-                android:numeric="integer" />
+                android:layout_marginRight="20dp"
+                android:orientation="horizontal">
 
-            <EditText
-                android:id="@+id/numeroOre"
+                <EditText
+                    android:id="@+id/numeroPartecipanti"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:hint="Numero massimo di iscritti"
+                    android:inputType="number"
+                    android:numeric="integer" />
+            </LinearLayout>
+
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:ems="10"
-                android:hint="ore disponibili"
-                android:inputType="number"
-                android:numeric="integer" />
+                android:layout_marginRight="20dp"
+                android:orientation="horizontal">
 
-            <EditText
-                android:id="@+id/numeroGruppi"
+                <EditText
+                    android:id="@+id/numeroOre"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:hint="Ore disponibili"
+                    android:inputType="number"
+                    android:numeric="integer" />
+            </LinearLayout>
+
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:ems="10"
-                android:hint="numero di gruppi"
-                android:inputType="number"
-                android:numeric="integer" />
+                android:layout_marginRight="20dp"
+                android:orientation="horizontal">
 
-            <EditText
-                android:id="@+id/txtNomeGruppo"
+                <EditText
+                    android:id="@+id/numeroGruppi"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:hint="Numero di gruppi"
+                    android:inputType="number"
+                    android:numeric="integer" />
+            </LinearLayout>
+
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:ems="10"
-                android:hint="Suffisso gruppo (opzionale*)"
-                android:inputType="textPersonName"
-                android:textSize="18sp" />
+                android:orientation="horizontal">
 
-            <TextView
-                android:id="@+id/txtSpiegazione"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="10dp"
-                android:text="*Se lesciato vuoto verrà assegnato ad ogni gruppo un nome formato da un numero progressivo e il nome del corso."
-                android:textSize="10sp"
-                android:visibility="gone" />
+                <EditText
+                    android:id="@+id/txtNomeGruppo"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:hint="Nome dei gruppi (opzionale)"
+                    android:inputType="textPersonName"
+                    android:textSize="18sp" />
 
-            <TextView
-                android:id="@+id/dataScadenza"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
-                android:text="Seleziona la data scadenza dei gruppi"
-                android:textSize="18sp" />
+                <ImageView
+                    android:id="@+id/img_why"
+                    android:layout_width="20dp"
+                    android:layout_height="20dp"
+                    android:layout_marginTop="5dp"
+                    app:srcCompat="@drawable/question" />
 
-            <CalendarView
-                android:id="@+id/calendario"
+            </LinearLayout>
+
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_gravity="center"
-                android:verticalScrollbarPosition="defaultPosition"
-                android:weekDayTextAppearance="@style/TextAppearance.AppCompat.Small" />
+                android:layout_marginTop="5dp"
+                android:orientation="vertical">
+
+                <TextView
+                    android:id="@+id/dataScadenza"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Seleziona la data di scadenza dei gruppi"
+                    android:textSize="18sp" />
+
+                <CalendarView
+                    android:id="@+id/calendario"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_gravity="center"
+                    android:verticalScrollbarPosition="defaultPosition"
+                    android:weekDayTextAppearance="@style/TextAppearance.AppCompat.Small" />
+            </LinearLayout>
 
         </LinearLayout>
     </ScrollView>
