--- a/app/src/main/res/layout/activity_prenotazione_gruppo.xml
+++ b/app/src/main/res/layout/activity_prenotazione_gruppo.xml
@@ -1,226 +1,204 @@
 <?xml version="1.0" encoding="utf-8"?>
+
+
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/bianco"
     android:orientation="vertical"
+    android:padding="10dp"
     tools:context=".PrenotazioneGruppoActivity">
 
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="0dp"
+        android:layout_marginBottom="10dp"
+        android:layout_weight="1"
+        android:orientation="vertical">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:gravity="center"
             android:orientation="vertical">
 
 
             <TextView
                 android:id="@+id/output"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
+                android:layout_height="wrap_content"
+                android:visibility="gone" />
 
             <TextView
                 android:id="@+id/nomeAula"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="TextView" />
+                android:gravity="center"
+                android:textColor="@color/intestazione"
+                android:textSize="24sp"
+                android:textStyle="bold"
+                app:fontFamily="@font/el_messiri_medium" />
 
             <com.davemorrissey.labs.subscaleview.SubsamplingScaleImageView
                 android:id="@+id/piantaAula"
                 android:layout_width="match_parent"
-                android:layout_height="139dp"
+                android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:layout_marginBottom="10dp" />
 
-            <LinearLayout
+            <TableLayout
+                android:id="@+id/tl_form_pren_gruppo"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="5dp"
-                android:orientation="vertical">
+                android:background="@drawable/layout_icona"
+                android:divider="@color/colorPrimaryDark"
+                android:dividerPadding="3dp"
+                android:paddingTop="3dp"
+                android:paddingBottom="3dp"
+                android:showDividers="middle">
 
-                <LinearLayout
+                <TableRow
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
-                    android:layout_weight="1"
-                    android:orientation="horizontal">
+                    android:layout_marginTop="3dp"
+                    android:layout_marginBottom="3dp">
+
+                    <Button
+                        android:id="@+id/btnGruppo"
+                        android:layout_width="20dp"
+                        android:layout_height="20dp"
+                        android:layout_marginRight="15dp"
+                        android:background="@drawable/dropdown" />
 
                     <TextView
                         android:id="@+id/textView21"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:text="Gruppo:" />
+                        android:layout_marginRight="15dp"
+                        android:text="Gruppo"
+                        android:textSize="16sp" />
 
                     <TextView
                         android:id="@+id/gruppoSelezionato"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginLeft="10dp"
-                        android:layout_marginRight="10dp"
                         android:layout_weight="1"
-                        android:text="Nessun gruppo selezionato"
-                        android:textColor="#000000"
-                        android:textSize="18sp" />
+                        android:textColor="@color/intestazione"
+                        android:textSize="16sp"
+                        android:textStyle="bold" />
+                </TableRow>
 
-                    <Button
-                        android:id="@+id/btnGruppo"
-                        android:layout_width="30dp"
-                        android:layout_height="30dp"
-                        android:layout_gravity="right"
-                        android:layout_weight="1"
-                        android:background="@android:drawable/ic_menu_edit"
-                        android:textSize="10sp" />
-
-                </LinearLayout>
-
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="vertical">
-
-                <LinearLayout
+                <TableRow
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
-                    android:layout_weight="1">
-
-                    <TextView
-                        android:id="@+id/textView25"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:text="Partecipanti selezionati: " />
-
-                    <TextView
-                        android:id="@+id/componenti"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginLeft="10dp"
-                        android:layout_marginRight="10dp"
-                        android:layout_weight="1"
-                        android:textColor="#000000"
-                        android:textSize="18sp" />
+                    android:layout_marginTop="3dp"
+                    android:layout_marginBottom="3dp">
 
                     <Button
-                        android:id="@+id/btnComponenti"
-                        android:layout_width="30dp"
-                        android:layout_height="30dp"
-                        android:layout_gravity="right"
-                        android:layout_weight="1"
-                        android:background="@android:drawable/ic_menu_edit"
-                        android:textSize="10sp" />
-                </LinearLayout>
-
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="vertical">
-
-                <LinearLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:orientation="horizontal">
+                        android:layout_width="20dp"
+                        android:layout_height="20dp"
+                        android:layout_marginRight="15dp"
+                        android:background="@drawable/dropdown"
+                        android:visibility="invisible" />
 
                     <TextView
-                        android:id="@+id/txtOreResidue"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:text="Ore residue: " />
+                        android:layout_marginRight="15dp"
+                        android:text="Ore residue"
+                        android:textSize="16sp" />
 
                     <TextView
                         android:id="@+id/txtOreResidueNumero"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
-                        android:text="TextView"
-                        android:textColor="#000000"
-                        android:textSize="18sp" />
+                        android:textColor="@color/intestazione"
+                        android:textSize="16sp"
+                        android:textStyle="bold" />
+                </TableRow>
 
-                </LinearLayout>
-
-                <TextView
-                    android:id="@+id/txtStatoAula"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:layout_weight="1"
-                    android:text="TextView" />
-
-                <LinearLayout
+                <TableRow
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
-                    android:layout_gravity="center"
-                    android:layout_weight="1"
-                    android:orientation="horizontal">
+                    android:layout_marginTop="3dp"
+                    android:layout_marginBottom="3dp">
 
                     <Button
-                        android:id="@+id/btnIndietro"
-                        android:layout_width="35dp"
-                        android:layout_height="35dp"
+                        android:id="@+id/btnComponenti"
+                        android:layout_width="20dp"
+                        android:layout_height="20dp"
+                        android:layout_marginRight="15dp"
+                        android:background="@drawable/dropdown" />
+
+                    <TextView
+                        android:id="@+id/textView25"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginRight="15dp"
+                        android:text="Partecipanti"
+                        android:textSize="16sp" />
+
+                    <TextView
+                        android:id="@+id/componenti"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
                         android:layout_weight="1"
-                        android:background="@android:drawable/ic_media_rew" />
+                        android:textColor="@color/intestazione"
+                        android:textSize="16sp"
+                        android:textStyle="bold" />
+                </TableRow>
+
+                <TableRow
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:layout_marginTop="3dp"
+                    android:layout_marginBottom="3dp">
+
+                    <Button
+                        android:id="@+id/btnData"
+                        android:layout_width="20dp"
+                        android:layout_height="20dp"
+                        android:layout_marginRight="15dp"
+                        android:background="@drawable/dropdown" />
+
+                    <TextView
+                        android:id="@+id/textView39"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginRight="15dp"
+                        android:text="Data"
+                        android:textSize="16sp" />
 
                     <TextView
                         android:id="@+id/txtDataMostrata"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
-                        android:text="TextView"
-                        android:textColor="@color/colorPrimary"
-                        android:textSize="20sp" />
+                        android:textColor="@color/intestazione"
+                        android:textSize="16sp"
+                        android:textStyle="bold" />
+                </TableRow>
+            </TableLayout>
 
-                    <Button
-                        android:id="@+id/btnAvanti"
-                        android:layout_width="35dp"
-                        android:layout_height="35dp"
-                        android:layout_weight="1"
-                        android:background="@android:drawable/ic_media_ff" />
-
-                </LinearLayout>
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="25dp"
-                    android:orientation="horizontal">
-
-                    <Button
-                        android:id="@+id/btnCercaDisponibilita"
-                        android:layout_width="wrap_content"
-                        android:layout_height="match_parent"
-                        android:layout_gravity="right"
-                        android:layout_weight="1"
-                        android:background="@drawable/button_layout"
-                        android:text="Cerca Disponibilità" />
-
-                    <Button
-                        android:id="@+id/btnPrenota"
-                        android:layout_width="wrap_content"
-                        android:layout_height="match_parent"
-                        android:layout_weight="1"
-                        android:background="@drawable/button_layout"
-                        android:text="PRENOTA" />
-                </LinearLayout>
-
-            </LinearLayout>
         </LinearLayout>
     </ScrollView>
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1"
-        android:orientation="vertical">
 
-        <ListView
-            android:id="@+id/listaDisponibilitaActivity"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent" />
+    <LinearLayout
+        android:id="@+id/ll_btn_pren_gruppo"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+        <Button
+            android:id="@+id/btnCercaDisponibilita"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:background="@drawable/button_layout"
+            android:text="Cerca Disponibilità" />
 
     </LinearLayout>
 
