--- a/app/src/main/res/layout/dialog_check_componenti.xml
+++ b/app/src/main/res/layout/dialog_check_componenti.xml
@@ -2,28 +2,25 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
-
+    android:orientation="vertical"
+    android:padding="10dp">
     <TextView
-        android:id="@+id/txtDialog"
+        android:id="@+id/et_dialog_gruppi"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/grigio_chiaro"
-        android:text="Seleziona i componenti:"
-        android:textColor="#000000"
-        android:textSize="18sp" />
+        android:layout_marginBottom="5dp"
+        android:gravity="center_horizontal"
+        android:text="Seleziona componeneti"
+        android:textColor="@color/colorPrimary"
+        android:textSize="24sp"
+        android:textStyle="bold" />
 
     <ListView
         android:id="@+id/listaComponenti"
-        android:layout_width="350dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="15dp"
-        android:layout_marginLeft="15dp"
-        android:layout_marginTop="15dp"
-        android:layout_marginRight="15dp"
-        android:layout_marginBottom="15dp"
-        android:layout_weight="600"
-        android:divider="#000000"
+        android:layout_weight="1"
+        android:divider="@color/colorPrimary"
         android:dividerHeight="0.5dp"
         android:footerDividersEnabled="true"
         android:headerDividersEnabled="true"
@@ -33,10 +30,12 @@
 
     <Button
         android:id="@+id/btnCheckComponenti"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="center"
+        android:layout_marginLeft="50dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginRight="50dp"
         android:background="@drawable/button_layout"
-        android:gravity="center"
-        android:text="OK" />
+        android:text="Conferma" />
+
 </LinearLayout>
