--- a/app/src/main/res/layout/dialog_scegli_gruppo.xml
+++ b/app/src/main/res/layout/dialog_scegli_gruppo.xml
@@ -3,28 +3,26 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:paddingTop="5dp"
+    android:paddingBottom="5dp">
 
     <TextView
-        android:id="@+id/scegliGruppo"
+        android:id="@+id/et_dialog_gruppi"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/grigio_chiaro"
-        android:text="Seleziona il gruppo per cui vuoi prenotare:"
-        android:textColor="#000000"
-        android:textSize="18sp" />
+        android:layout_marginBottom="5dp"
+        android:gravity="center_horizontal"
+        android:text="Seleziona gruppo"
+        android:textColor="@color/colorPrimary"
+        android:textSize="24sp"
+        android:textStyle="bold" />
 
-    <GridView
-        android:id="@+id/grigliaGruppi"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="15dp"
-        android:layout_marginTop="15dp"
-        android:layout_marginRight="15dp"
-        android:layout_marginBottom="15dp"
-        android:horizontalSpacing="15dp"
-        android:numColumns="auto_fit"
-        android:stretchMode="columnWidth"
-        android:verticalSpacing="20dp" />
+    <ListView
+        android:id="@+id/lv_pren_gruppi"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:divider="@color/bianco"
+        android:dividerHeight="5dp" />
 
 </LinearLayout>
