--- a/app/src/main/res/layout/dialog_user.xml
+++ b/app/src/main/res/layout/dialog_user.xml
@@ -72,7 +72,6 @@
             android:id="@+id/btn_logout"
             android:layout_width="wrap_content"
             android:layout_height="35dp"
-            android:layout_marginRight="10dp"
             android:layout_weight="1"
             android:background="@drawable/button_layout"
             android:text="LOGOUT" />
@@ -83,6 +82,7 @@
             android:layout_height="35dp"
             android:layout_weight="1"
             android:background="@drawable/button_layout"
-            android:text="@string/zxing_button_ok" />
+            android:text="@string/zxing_button_ok"
+            android:visibility="gone" />
     </LinearLayout>
 </LinearLayout>
