--- a/app/src/main/res/layout/row_layout_componenti.xml
+++ b/app/src/main/res/layout/row_layout_componenti.xml
@@ -2,25 +2,28 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="horizontal"
-    android:padding="5dp">
+    android:layout_margin="5dp"
+    android:orientation="horizontal">
 
     <CheckBox
         android:id="@+id/checkComponente"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginRight="5dp"
-        android:textColor="@android:color/tertiary_text_dark" />
+        android:textColor="@android:color/tertiary_text_dark"
+        android:textSize="18sp" />
 
     <TextView
         android:id="@+id/txtNomeComponente"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginRight="5dp" />
+        android:layout_marginRight="5dp"
+        android:textSize="18sp" />
 
     <TextView
         android:id="@+id/txtCognomeComponente"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textSize="18sp" />
 
 </LinearLayout>
